--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -28,3 +28,18 @@
     margin: 0 auto; /* Centraliza o botão */
   }
 
+  .botao-cadastro{
+    color: #3D83CC;
+    background-color: #3D83CC;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 300px; /* Definindo a largura do botão */
+    font-size: 30px;
+    height: 80px;
+    margin: 0 auto; /* Centraliza o botão */
+  }
+
