--- a/frontend/src/pages/Pets/ConsultarPet.css
+++ b/frontend/src/pages/Pets/ConsultarPet.css
@@ -9,7 +9,7 @@
 
 .pet-details-title {
   font-size: 40px;
-  color: #ffffff;
+  color: #000000;
   margin-bottom: 20px;
   font-weight: bold;
   text-align: center;
@@ -22,7 +22,7 @@
   border-radius: 50px;
   padding: 20px;
   width: 100%;
-  max-width: 500px;
+  max-width: 450px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
