--- a/frontend/src/pages/Pets/ConsultarPet.css
+++ b/frontend/src/pages/Pets/ConsultarPet.css
@@ -9,7 +9,7 @@
 
 .pet-details-title {
   font-size: 40px;
-  color: #000000;
+  color: #015cbe;
   margin-bottom: 20px;
   font-weight: bold;
   text-align: center;
